--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -60,3 +60,4 @@
 @import "components/c-mobile-header.css";
 @import "components/c-mobile-search.css";
 @import "components/c-mobile-header-menu.css";
+@import "components/c-mobile-header-auth.css";
