--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -61,3 +61,5 @@
 @import "components/c-mobile-search.css";
 @import "components/c-mobile-header-menu.css";
 @import "components/c-mobile-header-auth.css";
+@import "components/language-switcher.css";
+@import "components/c-mobile-info.css";
