--- a/source/styles/components/c-mobile-info.css
+++ b/source/styles/components/c-mobile-info.css
@@ -95,3 +95,12 @@
 	margin-top: var(--space-y);
 	margin-bottom: var(--space-y);
 }
+
+.c-mobile-info__layout {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: -1;
+}
