--- a/source/styles/components/text.css
+++ b/source/styles/components/text.css
@@ -1,5 +1,20 @@
 .text {
-	margin-top: 0;
-	margin-bottom: 0;
+	--space-y: 0;
+	--text-size: 16px;
+
+	margin-top: var(--space-y);
+	margin-bottom: var(--space-y);
+
+	font-size: var(--text-size);
+	font-family: "NeueMachina";
+	font-weight: 400;
+	line-height: 1;
 	word-wrap: break-word;
 }
+
+@media (min-width: 1220px) {
+	.text {
+		--text-size: 18px;
+	}
+}
+
