--- a/source/styles/components/c-main-header.css
+++ b/source/styles/components/c-main-header.css
@@ -7,7 +7,7 @@
 @media (min-width: 1200px) {
 	.c-main-header {
 		--display: block;
-		
+
 		background-color: #30334c;
 		border-radius: 100px;
 	}
@@ -70,6 +70,10 @@
 		transform: translateY(-50%) rotate(0.5turn);
 	}
 
+	.c-main-header__button-text {
+		text-transform: uppercase;
+	}
+
 	.c-main-header__logotype {
 		--space-x: auto;
 
@@ -113,5 +117,147 @@
 	.c-main-header__submenu-button:hover {
 		background-color: #e6e8f2;
 		border-color: #e6e8f2;
+	}
+
+	.c-main-header__logotype {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+
+		transform: translate(-50%, -50%);
+	}
+
+	.c-main-header__box {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		gap: 15px;
+		margin-left: auto;
+	}
+
+	.c-main-header__form {
+		position: relative;
+
+		padding-left: 15px;
+	}
+
+	.c-main-header__form::before {
+		content: "";
+
+		position: absolute;
+		top: 50%;
+		left: 0;
+
+		width: 1px;
+		height: 15px;
+
+		background-color: #9697a3;
+
+		transform: translateY(-50%);
+	}
+
+	.c-main-header__form-input {
+		--text-size: 0;
+		--icon: url("data:image/svg+xml,%3Csvg width='13' height='14' viewBox='0 0 13 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.2591 9.93367L13 13.0384L12.0945 14L9.35419 10.8946C8.33458 11.7626 7.06636 12.2347 5.75957 12.2327C2.58029 12.2327 0 9.49261 0 6.11637C0 2.74014 2.58029 0 5.75957 0C8.93886 0 11.5191 2.74014 11.5191 6.11637C11.521 7.50411 11.0764 8.85089 10.2591 9.93367ZM8.97534 9.42941C9.78751 8.54246 10.2411 7.35353 10.2392 6.11637C10.2392 3.48769 8.23427 1.35919 5.75957 1.35919C3.28424 1.35919 1.27991 3.48769 1.27991 6.11637C1.27991 8.74437 3.28424 10.8736 5.75957 10.8736C6.92456 10.8755 8.04413 10.3938 8.87934 9.53135L8.97534 9.42941Z' fill='white'/%3E%3C/svg%3E%0A");
+		--size: 30px;
+
+		padding: 0;
+		width: var(--size);
+		height: var(--size);
+
+		font: inherit;
+		font-size: var(--text-size);
+		color: #ffffff;
+
+		border: 1px solid transparent;
+		background-color: #454965;
+		background-image: var(--icon);
+		background-repeat: no-repeat;
+		background-position: center center;
+		border-radius: 5px;
+
+		transition-property: width;
+		transition-duration: 0.45s;
+	}
+
+	.c-main-header__form-input:focus {
+		--space-x: 15px;
+		--text-size: 16px;
+		--icon: none;
+
+		padding-right: calc(var(--space-x) * 2);
+		padding-left: var(--space-x);
+		width: 160px;
+
+		border-color: rgba(69,73,101, 0.5);
+		outline: none;
+	}
+
+	.c-main-header__form-reset {
+		--display: none;
+		--size: 15px;
+
+		position: absolute;
+		top: 50%;
+		right: 5px;
+		z-index: 10;
+
+		display: var(--display);
+		padding: 0;
+		width: var(--size);
+		height: var(--size);
+
+		background-color: transparent;
+		border: none;
+
+		transform: translateY(-50%);
+	}
+
+	.c-main-header__form-reset:hover {
+		cursor: pointer;
+	}
+
+	.c-main-header__form-input:focus ~ .c-main-header__form-reset {
+		--display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.c-main-header__user {
+		position: relative;
+
+		display: flex;
+		flex-wrap: wrap;
+		gap: 7px;
+		align-items: center;
+		padding-right: 15px;
+	}
+
+	.c-main-header__user::after {
+		content: "";
+
+		position: absolute;
+		top: 50%;
+		right: 0;
+
+		width: 1px;
+		height: 15px;
+
+		background-color: #9697a3;
+
+		transform: translateY(-50%);
+	}
+
+	.c-main-header__user-image {
+		--size: 24px;
+
+		width: var(--size);
+		height: var(--size);
+
+		border-radius: 50%;
+	}
+
+	.c-main-header__user-text {
+		font-size: 16px;
 	}
 }
