--- a/source/styles/components/main/hero.css
+++ b/source/styles/components/main/hero.css
@@ -21,6 +21,7 @@
 	}
 }
 
+
 .hero__title {
 	max-width: 330px;
 	padding-top: 104px;
@@ -33,6 +34,7 @@
 	}
 }
 
+
 .hero__text {
 	max-width: 282px;
 }
@@ -42,6 +44,7 @@
 		max-width: 500px;
 	}
 }
+
 
 .hero__icon-wrapper {
 	position: absolute;
@@ -62,11 +65,13 @@
 	}
 }
 
+
 .hero__link-wallet {
-	width: 48px;
-	height: 48px;
+	width: 53px;
+	height: 53px;
 	background-position: center center;
 	background-repeat: no-repeat;
+	margin-bottom: -6px;
 }
 
 @media (min-width: 1220px) {
@@ -76,34 +81,22 @@
 	}
 }
 
+
 .hero__link-wallet_subject_metamask {
-	margin-bottom: -6px;
 	background-image: url('../images/main/hero/metamask-mob.png');
 	background-color: #fff;
 	border-radius: 50%;
 }
 
-
 @media (min-width: 1220px) {
 	.hero__link-wallet_subject_metamask {
 		background-image: url('../images/main/hero/matamask.png');
-		background-color: #fff;
-		border-radius: 50%;
 	}
 }
 
 
-
-
-
-
-
-
-
-
-
 .hero__span {
-	padding: 7px 15px;
+	padding: 5px 9px;
 	font-size: 10px;
 	background: #212339;
 	box-shadow: 13.0435px 14.5946px 11.7391px rgba(24, 26, 55, 0.53);
@@ -112,167 +105,189 @@
 
 @media (min-width: 1220px) {
 	.hero__span {
+		padding: 7px 15px;
 		font-size: 18px;
 		box-shadow: 20px 30px 18px rgba(24, 26, 55, 0.63);
 	}
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.hero__span-svg {
-	position: relative;
-	padding: 7px 15px 7px 28px;
-}
-
-@media (min-width: 1220px) {
-	.hero__span-svg {
-		padding: 7px 15px 7px 38px;
-	}
-}
-
-.hero__span-svg:before {
+.hero__span:before {
+	position: absolute;
 	content: " ";
 	background-position: center center;
 	background-repeat: no-repeat;
-	height: 10px;
-	position: absolute;
-	width: 10px;
+	height: 7px;
+	width: 7px;
 	top: 50%;
 	left: 10%;
 	transform: translateY(-50%)
 }
 
-.hero__span_name_gambiling {
-	position: absolute;
-	left: 50%;
-	transform: translateX(-50%);
-	top: 70%;
-}
-
 @media (min-width: 1220px) {
-	.hero__span_name_gambiling {
-		left: 0;
-	}
-}
-
-.hero__span_name_gambiling::before {
-	background-image: url('../images/main/hero/game.svg');
-}
-
-
-.hero__span_name_finance {
-	position: absolute;
-	top: 20%;
-	left: 40%;
-}
-
-@media (min-width: 1220px) {
-	.hero__span_name_finance {
-		top: 0;
-		left: 40%;
-	}
-}
-
-.hero__span_name_finance::before {
-	background-image: url('../images/main/hero/finance.svg');
-}
-
-
-.hero__link-wallet_subject_panke {
-	background-image: url('../images/main/hero/panke-mob.png');
-	bottom: 30%;
-	left: 13%;
-}
-
-@media (min-width: 1220px) {
-	.hero__link-wallet_subject_panke {
-		background-image: url('../images/main/hero/panke.png');
-		bottom: 4%;
-		left: 11%;
-	}
-}
-
-.hero__span_name_1548 {
-	position: absolute;
-	bottom: 30%;
-	left: 15%;
-}
-
-@media (min-width: 1220px) {
-	.hero__span_name_1548 {
-		position: absolute;
-		bottom: 0;
+	.hero__span:before {
+		content: " ";
+		background-position: center center;
+		background-repeat: no-repeat;
+		height: 13px;
+		width: 9px;
+		top: 50%;
 		left: 10%;
+		transform: translateY(-50%)
 	}
 }
 
-.hero__span_name_market {
-	position: relative;
-	left: 10%;
-	bottom: 0;
-}
 
-.hero__span_name_market::before {
-	background-image: url('../images/main/hero/market.svg');
-}
-
-.hero__link-wallet_subject_curve {
-	background-image: url('../images/main/hero/curve-mob.png');
-	bottom: 25%;
-	right: 7%;
-}
-
-@media (min-width: 1220px) {
-	.hero__link-wallet_subject_curve {
-		background-image: url('../images/main/hero/curve.png');
-		bottom: 8%;
-		right: 11%;
-	}
-}
-
-.hero__span_name_842 {
+.hero__span_subject_finance {
 	position: absolute;
-	bottom: 25%;
-	right: 10%;
+	padding-left: 20px;
+	top: 9%;
+	left: 37%;
 }
 
 @media (min-width: 1220px) {
-	.hero__span_name_842 {
-		bottom: 5%;
-		right: 10%;
+	.hero__span_subject_finance {
+		padding-left: 44px;
+		top: 15%;
+		left: 35%;
 	}
 }
+
+
+.hero__span_subject_finance::before {
+	--icon: url("data:image/svg+xml,%3Csvg width='5' height='7' viewBox='0 0 5 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.80791 1.65009L3.93327 2.00786C3.86216 1.8886 3.7555 1.78425 3.61328 1.69481C3.41417 1.57556 3.15818 1.51593 2.8453 1.51593C2.51108 1.51593 2.24798 1.58301 2.05598 1.71717C1.91377 1.81655 1.84266 1.94326 1.84266 2.0973C1.84266 2.26624 1.9351 2.40537 2.11998 2.51469C2.2622 2.59916 2.4862 2.68363 2.79197 2.76811L3.32529 2.91717C3.86572 3.07121 4.26037 3.24512 4.50926 3.43891C4.83636 3.69233 4.99991 4.00537 4.99991 4.37804C4.99991 4.82525 4.79369 5.20289 4.38126 5.51096C4.05416 5.75444 3.66305 5.89854 3.20796 5.94326V6.69606H2.41864V5.96562C1.8711 5.93581 1.40889 5.77183 1.03201 5.4737C0.683575 5.2004 0.484469 4.87742 0.434692 4.50475L1.512 4.34078C1.512 4.57929 1.61155 4.79047 1.81066 4.97432C2.03821 5.17307 2.34753 5.27245 2.73863 5.27245C3.07996 5.27245 3.36084 5.19295 3.58128 5.03394C3.80172 4.87991 3.91194 4.68115 3.91194 4.43767C3.91194 4.22401 3.80883 4.04264 3.60261 3.89357C3.4675 3.79419 3.22929 3.69233 2.88796 3.58798L2.20531 3.38674C1.79288 3.26251 1.45867 3.11096 1.20267 2.93208C0.904014 2.71842 0.754684 2.465 0.754684 2.17183C0.754684 1.77432 0.936013 1.45382 1.29867 1.21034C1.60444 1.00661 1.97776 0.882391 2.41864 0.83767V0.174316H3.20796V0.830217C3.54928 0.850093 3.8586 0.93208 4.13593 1.07618C4.42748 1.23519 4.65147 1.42649 4.80791 1.65009Z' fill='white'/%3E%3C/svg%3E%0A");
+
+	background-image: var(--icon);
+}
+
+@media (min-width: 1220px) {
+	.hero__span_subject_finance::before {
+		--icon: url("data:image/svg+xml,%3Csvg width='9' height='13' viewBox='0 0 9 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.3949 3.00191L6.77681 3.66378C6.64526 3.44316 6.44793 3.25011 6.18483 3.08465C5.81648 2.86403 5.34289 2.75372 4.76406 2.75372C4.14577 2.75372 3.65902 2.87782 3.30383 3.12601C3.04073 3.30987 2.90918 3.54427 2.90918 3.82924C2.90918 4.14179 3.08019 4.39918 3.42223 4.60142C3.68534 4.75769 4.09972 4.91396 4.6654 5.07024L5.65204 5.34601C6.65184 5.63098 7.38195 5.95272 7.84239 6.31123C8.44753 6.78005 8.7501 7.35918 8.7501 8.04862C8.7501 8.87595 8.36859 9.57459 7.60559 10.1445C7.00045 10.595 6.27691 10.8615 5.43498 10.9443V12.3369H3.97475V10.9856C2.9618 10.9305 2.10671 10.6271 1.40948 10.0756C0.764876 9.56999 0.39653 8.97247 0.304443 8.28303L2.29746 7.97968C2.29746 8.42092 2.48163 8.8116 2.84998 9.15173C3.27095 9.51943 3.8432 9.70328 4.56673 9.70328C5.19818 9.70328 5.71782 9.5562 6.12563 9.26204C6.53344 8.97707 6.73735 8.60937 6.73735 8.15893C6.73735 7.76365 6.5466 7.42813 6.16509 7.15235C5.91514 6.9685 5.47444 6.78005 4.84299 6.58701L3.58009 6.21471C2.81709 5.9849 2.1988 5.70452 1.72521 5.37359C1.17269 4.97831 0.896428 4.50949 0.896428 3.96713C0.896428 3.23173 1.23189 2.63881 1.9028 2.18837C2.46848 1.81148 3.15913 1.58167 3.97475 1.49893V0.271729H5.43498V1.48514C6.06643 1.52191 6.63868 1.67359 7.15173 1.94018C7.6911 2.23434 8.10549 2.58825 8.3949 3.00191Z' fill='white'/%3E%3C/svg%3E%0A");
+	}
+}
+
+
+.hero__icon-wrapper_subject_uni {
+	top: 24px;
+	left: 76%;
+}
+
+@media (min-width: 1220px) {
+	.hero__icon-wrapper_subject_uni {
+		top: 20%;
+		left: 80%;
+	}
+}
+
 
 .hero__link-wallet_subject_uni {
 	background-image: url('../images/main/hero/uni-mob.png');
-	top: 16%;
-	right: 9%;
 }
 
 @media (min-width: 1220px) {
 	.hero__link-wallet_subject_uni {
 		background-image: url('../images/main/hero/uni.png');
-		top: 13%;
-		right: 14%;
 	}
 }
 
-.hero__span_name_0 {
+
+.hero__icon-wrapper_subject_curve {
+	top: 116%;
+	left: 75%;
+}
+
+@media (min-width: 1220px) {
+	.hero__icon-wrapper_subject_curve {
+		top: 99%;
+		left: 80%;
+	}
+}
+
+
+.hero__link-wallet_subject_curve {
+	background-image: url('../images/main/hero/curve-mob.png');
+}
+
+@media (min-width: 1220px) {
+	.hero__link-wallet_subject_curve {
+		background-image: url('../images/main/hero/curve.png');
+	}
+}
+
+
+.hero__span_subject_market {
 	position: absolute;
-	top: 25%;
-	right: 15%;
+	padding-left: 20px;
+	top: 134%;
+	left: 23%;
+}
+
+@media (min-width: 1220px) {
+	.hero__span_subject_market {
+		padding-left: 44px;
+		top: 110%;
+		left: 40%;
+	}
+}
+
+
+.hero__span_subject_market::before {
+	background-image: url('../images/main/hero/market-mob.svg');
+}
+
+@media (min-width: 1220px) {
+	.hero__span_subject_market::before {
+		background-image: url('../images/main/hero/market.svg');
+	}
+}
+
+
+.hero__span_subject_gambiling {
+	position: absolute;
+	padding-left: 20px;
+	top: 111%;
+	left: 43%;
+}
+
+@media (min-width: 1220px) {
+	.hero__span_subject_gambiling {
+		padding-left: 44px;
+		top: 60%;
+		left: 10%;
+	}
+}
+
+
+.hero__span_subject_gambiling::before {
+	background-image: url('../images/main/hero/game-mob.svg');
+}
+
+@media (min-width: 1220px) {
+	.hero__span_subject_gambiling::before {
+		background-image: url('../images/main/hero/game.svg');
+	}
+}
+
+
+.hero__icon-wrapper_subject_panke {
+	top: 103%;
+	left: 7%;
+}
+
+@media (min-width: 1220px) {
+	.hero__icon-wrapper_subject_panke {
+		top: 110%;
+		left: 10%;
+	}
+}
+
+
+.hero__link-wallet_subject_panke {
+	background-image: url('../images/main/hero/panke-mob.png');
+}
+
+@media (min-width: 1220px) {
+	.hero__link-wallet_subject_panke {
+		background-image: url('../images/main/hero/panke.png');
+	}
 }
