--- a/source/styles/components/main/slider.css
+++ b/source/styles/components/main/slider.css
@@ -3,11 +3,19 @@
 	display: none;
 }
 
+@media (min-width: 1220px) {
+
+	.swiper-button-prev,
+	.swiper-button-next {
+		display: block;
+	}
+}
+
 .slider {
 	max-width: 1500px;
 	width: 100%;
 	position: relative;
-	display: inline-flex;
+	margin: 0 auto;
 }
 
 .swiper {
@@ -16,52 +24,42 @@
 	position: relative;
 }
 
-.swiper-wrapper {
-	gap: 12px;
-	max-width: 1289px;
-}
-
-.slide__img--slide {
+.slide__card-img {
+	max-width: 280px;
 	min-height: 165px;
-	background-image: url('../images/main/slider/meta-slide.png');
 }
-
 
 @media (min-width: 1220px) {
-
-	.swiper-button-prev,
-	.swiper-button-next {
-		display: block;
-	}
-
-	.slide__img--slide {
+	.slide__card-img {
 		max-width: 671px;
 		min-height: 290px;
-		background-image: url('../images/main/slider/desktop-img.jpg');
 	}
+}
 
-	.slide__img-link {
+.slider__main-card-title {
+	position: absolute;
+	bottom: 65px;
+	left: 24px;
+}
+
+@media (min-width: 1220px) {
+	.slider__main-card-title {
 		position: absolute;
-		bottom: 30px;
+		top: 92px;
 		left: 60%;
+		max-width: 367px;
 	}
+}
 
-	.slide__info {
+@media (min-width: 1220px) {
+	.slider__card-info {
 		position: absolute;
 		top: 30px;
 		left: 60%;
 	}
+}
 
-	.slider__main-card-title {
-		max-width: 367px;
-		top: 70px;
-		left: 60%;
-		position: absolute;
-		font-size: 42px;
-	}
-
-
-
+@media (min-width: 1220px) {
 	.swiper-button {
 		width: 55px;
 		height: 55px;
@@ -84,4 +82,10 @@
 		display: none;
 	}
 
+	.slider__card-tag-wrapper {
+		position: absolute;
+		top: 84%;
+		left: 61%;
+	}
 }
+
