--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -63,4 +63,5 @@
 @import "components/c-mobile-header-auth.css";
 @import "components/language-switcher.css";
 @import "components/c-mobile-info.css";
+@import "components/external.css";
 @import "components/c-main-header.css";
