--- a/source/styles/components/main/study.css
+++ b/source/styles/components/main/study.css
@@ -35,10 +35,17 @@
 	all: unset;
 	border: 1px solid #8F93A4;
 	backdrop-filter: blur(4px);
-	border-radius: 20px;
+
 	padding: 12px 98px 12px 25px;
 
+	border-radius: 20px;
+	background-color: transparent;
+	border: 1px solid #8f93A4;
+	background-image: url("data:image/svg+xml,%3Csvg width='17' height='17' viewBox='0 0 17 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.4157 12.0623L17 15.8323L15.8158 17L12.2324 13.2292C10.8991 14.2832 9.24062 14.8564 7.53175 14.854C3.37422 14.854 0 11.5267 0 7.42702C0 3.32731 3.37422 0 7.53175 0C11.6893 0 15.0635 3.32731 15.0635 7.42702C15.0659 9.11213 14.4846 10.7475 13.4157 12.0623ZM11.737 11.45C12.7991 10.373 13.3922 8.92929 13.3898 7.42702C13.3898 4.23505 10.7679 1.65045 7.53175 1.65045C4.29477 1.65045 1.67372 4.23505 1.67372 7.42702C1.67372 10.6182 4.29477 13.2036 7.53175 13.2036C9.0552 13.206 10.5192 12.6211 11.6114 11.5738L11.737 11.45Z' fill='%238F93A4'/%3E%3C/svg%3E%0A");
+	background-repeat: no-repeat;
+	background-position: right 16px center;
 }
+
 
 .study__form-button {
 	all: unset;
