--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -65,3 +65,4 @@
 @import "components/c-mobile-info.css";
 @import "components/external.css";
 @import "components/c-main-header.css";
+@import "components/profile.css";
