--- a/source/styles/components/filter.css
+++ b/source/styles/components/filter.css
@@ -136,7 +136,14 @@
 	--border-color: #FFFFFF;
 }
 
+.noUi-origin {
+	left: 22px;
+	;
+}
 
+.fieldset {
+	border: none;
+}
 
 
 
@@ -147,6 +154,7 @@
 	justify-content: space-between;
 	flex-flow: wrap;
 	width: 100%;
+	margin: 0 auto;
 }
 
 
@@ -226,6 +234,8 @@
 .filter__time {
 	margin-bottom: 20px;
 	position: relative;
+	display: flex;
+	align-items: center;
 }
 
 .filter-range {
@@ -255,6 +265,7 @@
 	border-radius: 50%;
 	background-color: rgba(166, 167, 176, 1);
 	top: -11px;
+	left: -17px;
 }
 
 .noUi-handle:after,
@@ -283,24 +294,24 @@
 }
 
 .filter__clock_range_min {
-	margin-right: 20px;
+	margin-right: 3px;
 }
 
 @media (min-width: 1200px) {
 	.filter__clock_range_min {
-		margin-right: 13px;
+		margin-right: 29px;
 	}
 }
 
 
 .filter__clock_range_2m {
-	margin-right: 5px;
+	margin-right: 1px;
 	position: relative;
 }
 
 @media (min-width: 1200px) {
 	.filter__clock_range_2m {
-		margin-right: 10px;
+		margin-right: 15px;
 	}
 }
 
@@ -314,6 +325,12 @@
 	left: 5px;
 }
 
+@media (min-width: 1200px) {
+	.filter__clock_range_2m::before {
+		top: -44px;
+	}
+}
+
 .filter__clock_range_3m {
 	margin-right: 35px;
 	position: relative;
@@ -321,7 +338,7 @@
 
 @media (min-width: 1200px) {
 	.filter__clock_range_3m {
-		margin-right: 70px;
+		margin-right: 72px;
 	}
 }
 
@@ -336,8 +353,15 @@
 }
 
 
+@media (min-width: 1200px) {
+	.filter__clock_range_3m::before {
+		top: -44px;
+	}
+}
+
+
 .filter__clock_range_4m {
-	margin-right: 35px;
+	margin-right: 24px;
 	position: relative;
 }
 
@@ -357,14 +381,21 @@
 	left: 5px;
 }
 
+@media (min-width: 1200px) {
+	.filter__clock_range_4m::before {
+		top: -44px;
+	}
+}
+
+
 .filter__clock_range_5m {
-	margin-right: 35px;
+	margin-right: 27px;
 	position: relative;
 }
 
 @media (min-width: 1200px) {
 	.filter__clock_range_5m {
-		margin-right: 70px;
+		margin-right: 62px;
 	}
 }
 
@@ -378,6 +409,12 @@
 	left: 5px;
 }
 
+@media (min-width: 1200px) {
+	.filter__clock_range_5m::before {
+		top: -44px;
+	}
+}
+
 .filter__clock_range_6m {
 	margin-right: 35px;
 	position: relative;
@@ -385,7 +422,7 @@
 
 @media (min-width: 1200px) {
 	.filter__clock_range_6m {
-		margin-right: 148px;
+		margin-right: 160px;
 	}
 }
 
@@ -397,6 +434,12 @@
 	position: absolute;
 	top: -35px;
 	left: 3px;
+}
+
+@media (min-width: 1200px) {
+	.filter__clock_range_6m::before {
+		top: -44px;
+	}
 }
 
 
