--- a/source/styles/components/main/event.css
+++ b/source/styles/components/main/event.css
@@ -1,5 +1,5 @@
 .event {
-	padding: 30px 15px;
+	padding: 10px 0;
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
@@ -64,7 +64,7 @@
 		max-width: 632px;
 		width: 100%;
 		padding: 50px;
-		gap: 25px;
+		gap: 35px;
 		justify-content: space-between;
 	}
 
