--- a/source/styles/components/main/last.css
+++ b/source/styles/components/main/last.css
@@ -24,7 +24,7 @@
 
 @media (min-width: 1220px) {
 	.last {
-		padding: 50px 0;
+		padding: 96px 0;
 	}
 
 	.last__top {
@@ -37,7 +37,8 @@
 		display: inline-flex;
 		border: 1px solid #FFFFFF;
 		border-radius: 50px;
-		padding: 8px 20px;
+		padding: 8px 30px;
+		margin-right: 42px;
 	}
 
 
